GNOME Bugzilla – Bug 753338
value: free caps during failure
Last modified: 2015-08-16 13:39:03 UTC
While calling gst_value_deserialize_sample, if there is a failure after caps is ref'ed, then caps is getting leaked. Hence checking for caps in fail: goto condition and unref'ing it
Created attachment 308872 [details] [review] unref caps during failure cases
commit 0eb9dde1e803cfff490632553a13f705693710b6 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Fri Aug 7 10:08:21 2015 +0900 value: free caps during failure While calling gst_value_deserialize_sample, if there is a failure after caps is ref'ed, then caps is getting leaked. Hence checking for caps in fail: goto condition and unref'ing it https://bugzilla.gnome.org/show_bug.cgi?id=753338